--- a/composer.json
+++ b/composer.json
@@ -5,15 +5,15 @@
   "keywords": ["SMS", "counter", "GSM", "Unicode", "Mobile"],
   "license": "GPL-3.0-only",
   "require": {
-    "php": ">=7.4",
+    "php": "^5.5",
     "ext-mbstring": "*"
   },
   "autoload": {
     "psr-4": {
-      "multidialogo\\phpgsm7codec\\": "src"
+      "multidialogo\\phpgsm7codec\\": "src/"
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^9"
+    "phpunit/phpunit": "^5"
   }
 }
